Fix resource files references. Remove logging.